vs code landing page

--- a/week 1/week 1.1/dropbox landing page/index.html
+++ b/week 1/week 1.1/dropbox landing page/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visual Studio code</title>
+    <title>Dropbox landing page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -58,6 +58,7 @@
               <center><button style="padding-left:10px; padding: 15px; margin-bottom:5px ;color:black;border:2px black solid;border-radius: 5px;">Learn more</button></center>
             </div>
         </div>
+    
         <div class="video-photo">
             <img style="position: absolute;" src="assets/man.jpg" width="400" height="600" alt="">
             <video style="position: relative; "src="assets/dash-security-transparent-ui-1080x674-v2.webm" loop autoplay frameborder="100" height="600" width="600"></video>
