fix width of video

--- a/week 1/week 1.2/index.html
+++ b/week 1/week 1.2/index.html
@@ -47,23 +47,24 @@
                 AI code editor
             </h1>
             <div style="display: flex; justify-content: center;">
-            <div class="card">
-                <button class="download"
-                    style="cursor: pointer; height: 70px;width: 300px;font-weight: 500; font-size: 25px; padding: 5px; border-radius: 10px; border: none; margin-bottom: 10px;">Download
-                    for Windows</button>
-                <span><a href="" style="font-size: 18px; color: white;">Web</a> ,
-                    <a href="" style="font-size: 18px; color: white;">Insiders edition</a> <span>or</span>
+                <div class="card">
+                    <button class="download"
+                        style="cursor: pointer; height: 70px;width: 300px;font-weight: 500; font-size: 25px; padding: 5px; border-radius: 10px; border: none; margin-bottom: 10px;">Download
+                        for Windows</button>
+                    <span><a href="" style="font-size: 18px; color: white;">Web</a> ,
+                        <a href="" style="font-size: 18px; color: white;">Insiders edition</a> <span>or</span>
 
-                    <a href="" style="font-size: 18px; color: white;">other platforms</a></span><br>
-                <p style="text-align: center;">By using VS Code, you agree to its <a href=""
-                        style="font-size: 18px; color: white;">license</a> and <a style="font-size: 18px; color: white;"
-                        href="">privacy statement</a>.</p>
+                        <a href="" style="font-size: 18px; color: white;">other platforms</a></span><br>
+                    <p style="text-align: center;">By using VS Code, you agree to its <a href=""
+                            style="font-size: 18px; color: white;">license</a> and <a
+                            style="font-size: 18px; color: white;" href="">privacy statement</a>.</p>
+                </div>
+            </div>
+            <div
+                style="display: flex; align-items: center; justify-content: center; margin-top: 60px;margin-bottom: 20px; border-radius: 10px;">
+                <video style="border-radius: 15px;" src="hero-dark-sm.mp4" autoplay loop width="75%" ></video>
             </div>
         </div>
-        <div style="display: flex; align-items: center; justify-content: center; margin-top: 60px;margin-bottom: 20px; border-radius: 10px;">
-            <video style="border-radius: 15px;" src="hero-dark-sm.mp4" autoplay loop></video>
-        </div>
-</div>
     </section>
     <Footer></Footer>
 </body>
