todos using dom without styling

--- a/week 3/week 3.1/todos/todos.html
+++ b/week 3/week 3.1/todos/todos.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-dos List</title>
+    <link rel="stylesheet" href="todos.css">
 </head>
 <body>
-    
+    <h1 style="display: flex; align-items: center;justify-content: center;">to-dos</h1>
+    <input type="text" id="input-box">
+  <button onclick="addtodos" id = "add-todo" style="width: 80px; height: 30px; font-weight: 600;" >add to do</button>
+  <div id="tododiv">
+ 
+  </div>
+  <script src="todos.js"></script>
 </body>
 </html>
